name:                wai-cgi-test
version:             0.1
synopsis:            Test Wai CGI's ROBUST
homepage:            https://github.com/uuhan/wai-cgi-test
license-file:        LICENSE
author:              uuhan
maintainer:          xuminhui189@gmail.com
category:            Web
build-type:          Configure
-- extra-source-files:  
cabal-version:       >=1.10

executable wai-cgi-test
  main-is:             wai.hs
  build-depends:       base >=4.8 && <4.9
                     , yesod == 1.4.2
                     , wai == 3.2.0
                     , wai-extra == 3.0.14
  hs-source-dirs:      src
  default-language:    Haskell2010

executable yesod-cgi-test
  main-is:             yesod.hs
  build-depends:       base >=4.8 && <4.9
                     , wai == 3.2.0
                     , wai-extra == 3.0.14
  hs-source-dirs:      src
  default-language:    Haskell2010
