name:                wai-cgi-test
version:             0.1
synopsis:            Test Wai CGI's ROBUST
homepage:            https://github.com/uuhan/wai-cgi-test
license-file:        LICENSE
author:              uuhan
maintainer:          xuminhui189@gmail.com
category:            Web
build-type:          Configure
cabal-version:       >=1.10
extra-source-files:  
    configure configure.ac config.status
    config/install-sh config/missing
    nginx.conf.in wai-cgi-test.buildinfo.in
    fastcgi_params
    Makefile.in
    autogen.sh
    README.md
extra-tmp-files:
    Makefile config.log
    nginx.conf wai-cgi-test.buildinfo
    autom4te.cache

executable wai-cgi-test
  main-is:             wai.hs
  build-depends:       base >=4.8 && <4.9
                     , wai == 3.2.0
                     , wai-extra == 3.0.14
                     , http-types
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable yesod-cgi-test
  main-is:             yesod.hs
  build-depends:       base >=4.8 && <4.9
                     , yesod == 1.4.2
                     , wai == 3.2.0
                     , wai-extra == 3.0.14
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , QuasiQuotes
                     , TypeFamilies
                     , TemplateHaskell
